--- a/Dockerfile-consumer
+++ b/Dockerfile-consumer
@@ -8,19 +8,16 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 # Copy the code into the container.
-COPY . .
+COPY ./consumer/main.go .
 
-# Set necessary environmet variables needed for our image and build the API server.
+# Set necessary environmet variables needed for our image and build the consumer.
 ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-RUN go build -ldflags="-s -w" -o apiserver .
+RUN go build -ldflags="-s -w" -o consumer .
 
 FROM scratch
 
 # Copy binary and config files from /build to root folder of scratch container.
-COPY --from=builder ["/build/apiserver", "/build/.env", "/"]
-
-# Export necessary port.
-EXPOSE 5000
+COPY --from=builder ["/build/consumer", "/"]
 
 # Command to run when starting the container.
-ENTRYPOINT ["/apiserver"]
+ENTRYPOINT ["/consumer"]
