--- a/Dockerfile-consumer
+++ b/Dockerfile-consumer
@@ -10,13 +10,15 @@ RUN go mod download
 # Copy the code into the container.
 COPY ./consumer/main.go .
 
-# Set necessary environmet variables needed for our image and build the consumer.
+# Set necessary environment variables needed 
+# for our image and build the consumer.
 ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
 RUN go build -ldflags="-s -w" -o consumer .
 
 FROM scratch
 
-# Copy binary and config files from /build to root folder of scratch container.
+# Copy binary and config files from /build 
+# to root folder of scratch container.
 COPY --from=builder ["/build/consumer", "/"]
 
 # Command to run when starting the container.
